updated css filed

--- a/public/style.css
+++ b/public/style.css
@@ -33,10 +33,11 @@ a:visited {
   color: inherit;
 }
 nav a{
-  padding:10px
+  padding:10px;
+  font-weight: bold;
 }
 nav a:hover{
-background-color: rgb(187, 137, 0);
+color: rgb(1, 17, 4);
 
 }
 
